@@ -4,6 +4,7 @@ enemy=Enemy
 all=All
 
 welcome-msg=[img=item/car] [font=default-large-bold][color=210, 117, 36]Welcome to Weasel's Demolition Derby![/color][/font]\nIf this is your first time playing it will be worth while reading the Tips-And-Tricks.\nHave fun and let there be destruction!
+welcome-msg-redmew=Graciously hosted by [font=default-large-bold][color=cyan]RedMew[/color][/font] [img=redmew-cat]
 round-start=[img=item/car] [font=default-large-bold][color=210, 117, 36]Start of the round![/color][/font]
 player-lost=[img=item/car] [font=default-large-bold][color=255, 0, 0]Player died![/color][/font]
 player-won=[img=item/car] [font=default-large-bold][color=210, 117, 36]Player won ending the round![/color][/font]
